--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>Gühring AMB Kaffeebar</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../src/index.css">
+    <link href="http://fonts.cdnfonts.com/css/helvetica-neue-lt-w1g" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
